api-gateway/k8s/02-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-laravel-deploy
  namespace: k8s-basics
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway-laravel-deploy
  template:
    metadata:
      labels:
        app: gateway-laravel-deploy
    spec:
      containers:
        - name: php
          image: atrem2023/gateway-laravel:amd64
          ports:
            - containerPort: 9000
          livenessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 5
            periodSeconds: 10
