api-gateway/k8s/03.1-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-nginx-deploy
  namespace: k8s-basics
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway-nginx-deploy
  template:
    metadata:
      labels:
        app: gateway-nginx-deploy
    spec:
      containers:
        - name: nginx
          image: atrem2023/app-nginx:amd64
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf          
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
