api-gateway/k8s/02.1-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: k8s-basics
spec:
  ports:
    - name: fpm
      protocol: TCP
      port: 9000
      targetPort: 9000
  selector:
    app: gateway-laravel-deploy
