api-gateway/k8s/03.2-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-nginx-service
  namespace: k8s-basics
  labels:
    app: gateway-nginx-deploy
spec:
  type: NodePort
  selector:
    app: gateway-nginx-deploy
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
